[build-system]
requires = ["setuptools >= 61.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "dgpost"
authors = [
    {name = "Peter Kraus", email = "peter.kraus@tu-berlin.de"},
    {name = "Ueli Sauter"},
]
maintainers = [
    {name = "Peter Kraus", email = "peter.kraus@tu-berlin.de"},
]
description = "datagram post-processing toolkit"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "uncertainties",
    "pandas",
    "openpyxl",
    "pint>=0.22",
    "chemicals>=1.0.0",
    "rdkit>=2022.3",
    "h5netcdf~=1.0",
    "xarray ~= 2024.02",
    "xarray-datatree>=0.0.12",
    "dgbowl-schemas>=116",
    "matplotlib>=3.5.0",
    "requests",
]

[project.optional-dependencies]
testing = ["pytest"]
docs = [
    "sphinx ~= 7.2",
    "sphinx-rtd-theme ~= 1.3.0",
    "autodoc-pydantic ~= 2.1.0",
]

[project.urls]
Documentation = "https://dgbowl.github.io/dgpost/master"
Issues = "https://github.com/dgbowl/dgpost/issues"
Repository = "https://github.com/dgbowl/dgpost/"

[project.scripts]
dgpost = "dgpost:run_with_arguments"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.dev{ccount}"
dirty_template = "{tag}.dev{ccount}"

[tool.ruff]

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"